Closed Bug 1694973 Opened 3 years ago Closed 3 years ago

building with --disable-printing fails with compile error

Categories

(Core :: Widget: Gtk, defect)

Firefox 86
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: u677686, Assigned: u677686)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

I tried to compile firefox 86.0 and mozilla-central using ac_add_options --disable-printing

Actual results:

the build fails with a fatal error

Expected results:

Compiled successfully without warnings.

The Bugbug bot thinks this bug should belong to the 'Firefox Build System::General' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → General
Product: Firefox → Firefox Build System
Assignee: nobody → horst.git
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Component: General → Widget: Gtk
Product: Firefox Build System → Core
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/97d59d37ebb1
Fix compile error when using --disable-printing" r=Gijs,karlt
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: