Bug 1694973 - Fix compile error when using --disable-printing" r=Gijs,karlt

Differential Revision: https://phabricator.services.mozilla.com/D106493